infrastructure/kubernetes/base/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sport-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sport
      tier: db
  template:
    metadata:
      labels:
        app: sport
        tier: db
    spec:
      containers:
      - name: timescaledb
        image: timescale/timescaledb-ha:pg15-latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: sport
    tier: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
