infrastructure/kubernetes/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sport-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sport
      tier: cache
  template:
    metadata:
      labels:
        app: sport
        tier: cache
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: sport
    tier: cache
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
