infrastructure/kubernetes/base/telemetry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sport-telemetry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sport
      tier: telemetry
  template:
    metadata:
      labels:
        app: sport
        tier: telemetry
    spec:
      containers:
      - name: fastapi
        image: sport-telemetry:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: sport-telemetry-service
spec:
  selector:
    app: sport
    tier: telemetry
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
